暫時調整編譯錯誤